--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.14.1",
     "asyncpg>=0.30.0",
     "fastapi>=0.115.8",
+    "httpx>=0.28.1",
+    "pydantic-settings>=2.7.1",
     "pytest>=8.3.4",
     "pytest-asyncio>=0.25.3",
     "pytest-mock>=3.14.0",
@@ -14,3 +17,6 @@ dependencies = [
     "sqlalchemy>=2.0.37",
     "uvicorn>=0.34.0",
 ]
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+
